--- a/css/style.css
+++ b/css/style.css
@@ -53,49 +53,23 @@ header{
 	font-family: 'Montserrat', sans-serif;
 	text-transform: uppercase;
 }
+.navbar-header{
+	display: flex;
+	margin-top: 5px;
+}
+.navbar-brand{
+	overflow:hidden;
+	-webkit-border-radius:50px;
+	-moz-border-radius:50px;
+	border-radius:50px;
+	width:20px;
+	height:20px;
+	display: block;
+	background-color: #333333;
+	margin-top: 5px;
+	margin-right: 5px;
+}
 
-
-/*Services*/
-.services{
-	padding-top: 96px;
-
-}
-.services .container{
-	border-bottom: 1px solid #ddd;
-}
-.single_service{
-	padding-bottom: 96px;
-}
-.single_service i{
-	font-size: 25px;
-	color: #f73b56;
-}
-.single_service h2{
-	color: #000000;
-	font-size: 25px;
-	text-transform: uppercase;
-}
-.single_service p{
-	color: #404040;
-	font-size: 14px;
-}
-.single_progress_bar .progress {
-height: 1px;
-margin-bottom: 20px;
-overflow: hidden;
-background-color: #d5d5d5;
-border-radius: 0px;
--webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
-}
-.single_progress_bar .progress-bar {
-background-color: #2d3334;
-}
-.single_progress_bar h2{
-	color: 000;
-	font-size: 14px;
-	font-weight: 400;
-}
 .about_us_p{
 	font-size: 14px;
 	color: #272727;
@@ -205,7 +179,6 @@ bottom: 11px;
 left: 20px;
 color: #fff;
 font-size: 14px;
-text-transform: uppercase;	
 }
 .no_padding{
 	padding-left: 0px;
