--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ header{
 }
 .home_text p{
 	color: #404040;
-	font-size: 14px;
+	font-size: 18px;
 	text-transform: uppercase;
 }
 .home_text img{}
@@ -71,7 +71,7 @@ header{
 }
 
 .about_us_p{
-	font-size: 14px;
+	font-size: 16px;
 	color: #272727;
 	margin-top: 20px;
 	margin-bottom: 10px;
@@ -197,7 +197,7 @@ font-size: 14px;
 	margin-bottom: 20px;
 }
 .work_title p, .contact_title p, .exploration_title p{
-	font-size: 14px;
+	font-size: 18px;
 	color: #000;
 	margin-bottom: 30px;
 }
@@ -216,7 +216,7 @@ font-size: 14px;
 }
 .left p{
 	margin-bottom: 60px;
-	font-size: 14px;
+	font-size: 18px;
 	color: #000;
 }
 .baton{
@@ -278,7 +278,7 @@ color: #3d3d3d;
 .input {
 	width: 25px;
 	height: 25px;
-	background-color: #2C3E50;
+	background-color: #967E76;
 	position: relative;
 	border-radius: 50%;
 }
@@ -292,7 +292,7 @@ color: #3d3d3d;
 	z-index: -1;
 	top: 50%;
 	transform: translateY(-50%);
-	background-color: #2C3E50;
+	background-color: #967E76;
 	width: 4vw;
 	height: 5px;
 	max-width: 50px;
@@ -304,13 +304,13 @@ color: #3d3d3d;
 	right: calc(-4vw + 12.5px);
 }
 .input.active {
-	background-color: #2C3E50;
+	background-color: #967E76;
 }
 .input.active::before {
-	background-color: #2C3E50;
+	background-color: #967E76;
 }
 .input.active::after {
-	background-color: #AEB6BF;
+	background-color: #F7ECDE;
 }
 .input.active span {
 	font-weight: 700;
@@ -322,7 +322,7 @@ color: #3d3d3d;
 	font-size: 13px;
 }
 .input.active ~ .input, .input.active ~ .input::before, .input.active ~ .input::after {
-	background-color: #AEB6BF;
+	background-color: #F7ECDE;
 }
 .input span {
 	width: 1px;
