--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ p{
 	font-family: 'Montserrat', sans-serif;
 }
 a{
-	font-family: 'Dosis', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	text-decoration: none;
 }
 h1, h2, h3, h4, h5, h6{
